--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,8 @@
     P.O., P.S. & BLOCK – BARUIPUR<br>
     DISTRICT – SOUTH 24 PARGANAS<br>
     WEST BENGAL – 700144<br>
-    Cell : +91 98310 22281 / +91 90732 95585<br>
+    reg no - <br>
+    Cell : +91 98310 22281 / +91 8961288148<br>
     <button type="button" class="btn btn-link"><a href="mailto:bymawb@gmail.com">E-mail : bymawb@gmail.com</a></button>
     <div><a href="https://www.facebook.com/bymawb" target="_blank" class="paddin-lef-2rem"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></div>
   </div>
