--- a/gallary.html
+++ b/gallary.html
@@ -109,6 +109,20 @@
           <img src="./img/pic10.jpg" class="img-fluid paddin-top-2" alt="Responsive image">
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-4">
+
+          <img src="./img/van1.jpeg" class="img-fluid paddin-top-2" alt="Responsive image">
+        </div>
+        <div class="col-lg-4">
+
+          <img src="./img/award.jpeg" class="img-fluid paddin-top-2" alt="Responsive image">
+        </div>
+        <div class="col-lg-4">
+
+          <img src="./img/computer1.jpg" class="img-fluid paddin-top-2" alt="Responsive image">
+        </div>
+      </div>
     </div>
 
 </body>
